Edited html for inputting images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="https://lh3.googleusercontent.com/e0lpZN9pH63OTV-L9VzgSG8tVzWAg1K5-TuaKa5GWKV78K_0d9nnyN4mfbKCcIAcu3GTBOM6-hklCUaKCL5Hp9iq5ogHoP8sp08Dcc16" alt="Mindfulness image">
                 </div>
                 <div class="overview-hero-text">
                     <h2>Live  your healthiest life now!</h2>
@@ -39,21 +39,21 @@
                 <h2>Learn About</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="https://lh6.googleusercontent.com/_XOAKCAWQZNf3v_vQQaKZrxb0nYbqPrF0sOudfpr_r57z_pQP4v2leCWqELrun76MNVpZRedntQw_L_JsgGIq113YQ3A_qt8dEOCIIL9NcwLxyvjM1TrqjGpvm9NjloxnVDTEtEy" alt="Artifical Intelligence image">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
                             <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="https://lh3.googleusercontent.com/nYfUcOrrtdHJPq0QW0fpIPNYEj36A0VktJZDZtCPvXmAGiAB-GcM-JaC_vxYyRKUfmYyHOIBx7vOL_mu4j8fjvK92DlAT8eBHCPe21j1Qz4ZcJGCdMAVRXRF3DbeBT6rnUrS9NzF" alt="Fitness Tracker">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="https://lh4.googleusercontent.com/gp-j3mizLo0IBB4W9sCOLibbDpqZMQ070YdLEiNIx1KtXmIsSJw7T9P4m-NchAm8bMJdoIeLmZCIp3_4Eu8pYgZoee8Afeu9qbg68W68N0izPJ6T6XbdogMNk3UPyyfa3TqtJcDY" alt="Healthy Lifestyle">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
                             <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
@@ -77,7 +77,7 @@
             <div class="container">
                 <h2>Recent Stories</h2>
                 <article>
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/originals/7d/ea/2d/7dea2dbab4e77fc02764f092599fd10c.jpg" alt="Chris Turk">
                     <div class="article-body">
                         <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.</h3>
                         <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that support better care.</p>
@@ -85,7 +85,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="" alt="">
+                    <img src="https://www.ft.com/__origami/service/image/v2/images/raw/https%3A%2F%2Fd1e00ek4ebabms.cloudfront.net%2Fproduction%2F55dbf572-6f43-4dae-ae0a-47c0808dffee.jpg?fit=scale-down&source=next&width=700" alt="INFO lab">
                     <div class="article-body">
                         <h3>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h3>
                         <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing for high risk individuals in the parishes of Kingston and St. Andrew.</p>
@@ -110,7 +110,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>Copyright 2020, Your Name</p>
+            <p>Copyright 2020, Hassanah Al-Saba</p>
         </div>
     </footer>
 </body>
